--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         /* Estilos para el botón "Seguir en Instagram" */
         .btn-follow {
             position: absolute; /* Posicionarlo en el costado */
-            right: 200%; /* Al borde derecho */
+            right: 200; /* Al borde derecho */
             top: 50%; /* Centrado verticalmente */
             transform: translateY(-50%) rotate(90deg); /* Girar 90 grados y centrar */
             padding: 10px 20px;
