--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         /* Estilos para el botón "Seguir en Instagram" */
         .btn-follow {
             position: absolute; /* Posicionarlo en el costado */
-            right: 0; /* Alinearlo con el borde derecho */
-            top: 50%; /* Centrar verticalmente */
-            transform: translateY(-50%) rotate(90deg); /* Girar 90 grados y centrar */
+            bottom: 20px; /* En la parte inferior */
+            left: 20px; /* Al borde izquierdo */
+            transform: rotate(90deg); /* Girar 90 grados */
             padding: 10px 20px;
             font-size: 16px;
             color: white;
