--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
 <body>
     <div class="fullscreen">
         <div class="centered-text">
-            Véndame para sanar.<br>
+            Véndame para sanar,<br>
             No para cegarme.<br>
             <br>
-            Véndame para sanar.<br>
+            Véndame para sanar,<br>
             No para cegarme.<br>
             <br>
             Guíame con tus afectos<br>
-            Y no veré la sombra<br>
+            Y no veré la sombra.<br>
             <br>
             <br>
             MEDVED - CIEGOS
