--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             position: absolute; /* Posicionarlo en el costado */
             top: 10px; /* Alinearlo con el borde superior */
             left: 50%; /* Centrar horizontalmente */
-            transform: translateX(-50%) rotate(90deg); /* Girar 90 grados y centrar */
+            transform: translateX(-50%); /* Centrar */
             padding: 10px 20px;
             font-size: 16px;
             color: white;
