--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             bottom: 20px; /* Margen inferior */
             left: 50%; /* Centrar horizontalmente */
             transform: translateX(-50%); /* Ajustar para centrar */
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 11px 22px; /* Agrandar padding en un 10% */
+            font-size: 18px; /* Aumentar el tamaño de fuente en un 10% */
             color: white;
             background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro semitransparente */
             border: none;
@@ -81,11 +81,11 @@
         /* Estilos para el botón "Seguir en Instagram" */
         .btn-follow {
             position: absolute; /* Posicionarlo en el costado */
-            top: 10px; /* Alinearlo con el borde superior */
+            top: 15px; /* Ajustar la posición vertical */
             left: 50%; /* Centrar horizontalmente */
-            transform: translateX(-50%); /* Centrar */
-            padding: 10px 20px;
-            font-size: 16px;
+            transform: translateX(-50%) rotate(90deg); /* Girar 90 grados */
+            padding: 11px 22px; /* Agrandar padding en un 10% */
+            font-size: 18px; /* Aumentar el tamaño de fuente en un 10% */
             color: white;
             background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro semitransparente */
             border: none;
@@ -107,13 +107,12 @@
             }
 
             .btn-listen, .btn-follow {
-                font-size: 14px; /* Tamaño de fuente más pequeño para botones */
-                padding: 8px 15px; /* Ajustar el padding */
+                font-size: 15px; /* Tamaño de fuente más pequeño para botones */
+                padding: 9px 18px; /* Ajustar el padding */
             }
 
             .btn-follow {
-                top: 5px; /* Ajustar la distancia al borde en móviles */
-                left: 50%; /* Centrarlo horizontalmente en móviles */
+                top: 10px; /* Ajustar la distancia al borde en móviles */
             }
         }
     </style>
