--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
         /* Estilos para el botón "Seguir en Instagram" */
         .btn-follow {
             position: absolute; /* Posicionarlo en el costado */
-            top: 15px; /* Ajustar la posición vertical */
+            top: px; /* Ajustar la posición vertical */
             left: 50%; /* Centrar horizontalmente */
-            transform: translateX(-50%) rotate(90deg); /* Girar 90 grados */
+            transform: translateX(-50%); /**/
             padding: 11px 22px; /* Agrandar padding en un 10% */
             font-size: 18px; /* Aumentar el tamaño de fuente en un 10% */
             color: white;
