--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
     <div class="fullscreen">
         <div class="centered-text">
             Véndame para sanar,<br>
-            No para cegarme.<br>
+            no para cegarme.<br>
             <br>
             Véndame para sanar,<br>
-            No para cegarme.<br>
+            no para cegarme.<br>
             <br>
             Guíame con tus afectos<br>
-            Y no veré la sombra.<br>
+            y no veré la sombra.<br>
             <br>
             <br>
             MEDVED - CIEGOS
