--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         /* Estilos para el botón "Seguir en Instagram" */
         .btn-follow {
             position: absolute; /* Posicionarlo en el costado */
-            top: px; /* Ajustar la posición vertical */
+            top: 20px; /* Ajustar la posición vertical */
             left: 50%; /* Centrar horizontalmente */
             transform: translateX(-50%); /**/
             padding: 11px 22px; /* Agrandar padding en un 10% */
