--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             bottom: 20px; /* Margen inferior */
             left: 50%; /* Centrar horizontalmente */
             transform: translateX(-50%); /* Ajustar para centrar */
-            padding: 11px 22px; /* Agrandar padding en un 10% */
-            font-size: 18px; /* Aumentar el tamaño de fuente en un 10% */
+            padding: 10px 20px;
+            font-size: 16px;
             color: white;
             background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro semitransparente */
             border: none;
@@ -81,11 +81,11 @@
         /* Estilos para el botón "Seguir en Instagram" */
         .btn-follow {
             position: absolute; /* Posicionarlo en el costado */
-            top: 20px; /* Ajustar la posición vertical */
+            top: 10px; /* Alinearlo con el borde superior */
             left: 50%; /* Centrar horizontalmente */
-            transform: translateX(-50%); /**/
-            padding: 11px 22px; /* Agrandar padding en un 10% */
-            font-size: 18px; /* Aumentar el tamaño de fuente en un 10% */
+            transform: translateX(-50%); /* Centrar */
+            padding: 10px 20px;
+            font-size: 16px;
             color: white;
             background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro semitransparente */
             border: none;
@@ -107,12 +107,13 @@
             }
 
             .btn-listen, .btn-follow {
-                font-size: 15px; /* Tamaño de fuente más pequeño para botones */
-                padding: 9px 18px; /* Ajustar el padding */
+                font-size: 14px; /* Tamaño de fuente más pequeño para botones */
+                padding: 8px 15px; /* Ajustar el padding */
             }
 
             .btn-follow {
-                top: 10px; /* Ajustar la distancia al borde en móviles */
+                top: 5px; /* Ajustar la distancia al borde en móviles */
+                left: 50%; /* Centrarlo horizontalmente en móviles */
             }
         }
     </style>
@@ -121,13 +122,13 @@
     <div class="fullscreen">
         <div class="centered-text">
             Véndame para sanar,<br>
-            no para cegarme.<br>
+            No para cegarme.<br>
             <br>
             Véndame para sanar,<br>
-            no para cegarme.<br>
+            No para cegarme.<br>
             <br>
             Guíame con tus afectos<br>
-            y no veré la sombra.<br>
+            Y no veré la sombra.<br>
             <br>
             <br>
             MEDVED - CIEGOS
@@ -142,6 +143,12 @@
         <a href="https://www.instagram.com/medvedband" target="_blank">
             <button class="btn-follow">Seguir en Instagram</button>
         </a>
+
+        <!-- Contador de visitas de Hitwebcounter -->
+        <a href="https://www.hitwebcounter.com" target="_blank">
+            <img src="https://hitwebcounter.com/counter/counter.php?page=16758544&style=0001&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites" border="0" />
+        </a> 
+
     </div>
 </body>
 </html>
